 - Added "standard_widget_colors" preference. It allows a more stylish look.
 - Fixed the return value of Cache_parse_multiple_field.
 - Added the multipart/form-data encoding method to form submission.
 - Fixed a bug in Html_parse_entity.
 - Fixed a bug in a_Url_cmp.
 - Fixed a bug in Cookies_parse_one. Set it to a single return point too!
 - Added dStr_memmem() and dStr_printable() to dlib.
   Patches: place
+- Fixed a problem with locally-installed dpis.
 - Added code for optional image loading (nice interface) very advanced!
 - Added an experimental gzip decoder! 
 - Implemented "Load Images" in the page menu and cleaned up html.hh.
 - Added shortcuts: PgDn=Spc, PgUp=b, Back=BackSpace, Forw=Shift+Backspace.
 - Made a cleanup in cache's parse header code.
 - Added support for "charset" in the META element.
 - Added a_Capi_get_flags(). It requests a cache entry's status as flags.
 - Switched URL_DATA type from char* to a dStr.
   Patch: place, Jorge Arellano Cid
+- Fixed a va_list-related SEGFAULT on 64bit-arch in dStr_vsprintfa().
   Added const declarations in html parser.
   Patch: Vincent Thomasset
+- Fixed void to int conversions for 64bit-arch.
   Patch: Jorge Arellano Cid, higuita
+- Set the url resolver to escape illegal chars instead of stripping.
   Patch: Jorge Arellano Cid, Jeremy Henty
+- Added suport for old iconv() (const char** as 2nd arg).
   Patch: Jorge Arellano Cid, Christian Kellermann
+- Added a strndup() replacement in dw2
   Patch: Alexander Becher, Johannes Hofmann, Jorge Arellano Cid
+- Fixed calcHashValue() to only return non-negative numbers (was SEGFAULT).
 - Improved scrolling performance on large pages by copying screen data
    instead of rendering.
 - Updated configure.in to check only for fltk2-config.
 - Implemented drag-scrolling with the mouse's middle button.
 - Disabled double buffering (good for debugging redraws).
 - Switched dns.c from gethostbyname* to getaddrinfo (& removed libc5 code).